src/objects/Rebound_Priorities__c.object
<CustomObject>
    <description>Used by North America to track the Priorities of the Customer identified as part of the Rebound Programs</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rebound Priorities</relationshipLabel>
        <relationshipName>Rebound_Priorities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rebound Priorities</relationshipLabel>
        <relationshipName>Rebound_Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1_Priority__c</fullName>
        <inlineHelpText>What is the Customer&apos;s Top Rebound Priority</inlineHelpText>
        <label># 1 Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safety/Patient Experience</fullName>
                </value>
                <value>
                    <fullName>Procedural Expansion</fullName>
                </value>
                <value>
                    <fullName>Practice Efficiencies/Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_Priority__c</fullName>
        <label>#2 Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safety/Patient Experience</fullName>
                </value>
                <value>
                    <fullName>Procedural Expansion</fullName>
                </value>
                <value>
                    <fullName>Practice Efficiencies/Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_Priority__c</fullName>
        <label>#3 Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safety/Patient Experience</fullName>
                </value>
                <value>
                    <fullName>Procedural Expansion</fullName>
                </value>
                <value>
                    <fullName>Practice Efficiencies/Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rebound Priorities</label>
    <nameField>
        <displayFormat>RBD-{000000}</displayFormat>
        <label>Rebound Priorities Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebound Priorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>